<resources>
    <string name="app_name">Planet</string>
    <string name="we_pride_ourselves_on_showing_updates_in_real_time">We pride ourselves on showing updates in real time.</string>
    <string name="welcome_to_planet_com">Welcome to Planet.com!</string>
    <string name="get_started">Get Started</string>
    <string name="description">We pride ourselves on showing location updates in real time. Tap GET STARTED to log in and/or register!</string>
    <string name="updated_in_real_time">Updated in real time</string>
    <string name="planet_com">Planet.com</string>
    <string name="login">Login</string>
    <string name="forgotpassword">ForgotPassword?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="textview">Welcome!</string>
    <string name="name">Name</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="screenshot">Screenshot</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_screenshot_gallery">ScreenshotGallery</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>